1、添加所有注释，生成API 2、启动之后访问http://127.0.0.1:7779/swagger/index.html 可以看到对应的API
